--- a/bower.json
+++ b/bower.json
@@ -8,11 +8,15 @@
     "angular-resource": "1.2.11",
     "angular-cookies": "1.2.11",
     "angular-sanitize": "1.2.11",
-    "angular-route": "1.2.11"
+    "angular-route": "1.2.11",
+    "angular-moment": "~0.6.2",
+    "lodash": "~2.4.1",
+    "ngAutocomplete": "*",
+    "checklist-model": "~0.1.3"
   },
   "devDependencies": {
     "angular-mocks": "1.2.11",
     "angular-scenario": "1.2.11"
   },
-  "testPath": "test/client/spec"  
+  "testPath": "test/client/spec"
 }
