--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "angular-moment": "~0.6.2",
     "lodash": "~2.4.1",
     "ngAutocomplete": "*",
-    "checklist-model": "~0.1.3"
+    "checklist-model": "~0.1.3",
+    "normalize.css": "~3.0.0"
   },
   "devDependencies": {
     "angular-mocks": "1.2.11",
