--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "passport-local": "~0.1.6",
     "q": "~1.0.0",
     "ejs": "~0.8.4",
-    "mongoose-timestamp": "~0.2.0"
+    "mongoose-timestamp": "~0.2.0",
+    "sendgrid": "~1.0.2"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
@@ -24,7 +25,7 @@
     "grunt-contrib-copy": "~0.4.1",
     "grunt-contrib-cssmin": "~0.7.0",
     "grunt-contrib-htmlmin": "~0.1.3",
-    "grunt-contrib-imagemin": "~0.5.0",
+    "grunt-contrib-imagemin": "~0.3.0",
     "grunt-contrib-jshint": "~0.7.1",
     "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-watch": "~0.5.2",
@@ -64,7 +65,10 @@
     "node-bourbon": "~1.0.0",
     "node-neat": "~1.1.0",
     "grunt-spritesmith": "~1.21.2",
-    "phantomjssmith": "~0.4.0"
+    "phantomjssmith": "~0.4.0",
+    "agenda": "~0.5.9",
+    "handlebars": "~2.0.0-alpha.2",
+    "premailer-api": "~1.0.2"
   },
   "engines": {
     "node": ">=0.10.0"
